tests/ui/errors/snapshots/infer_nil_not_supported_for_map.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `nil` is not supported
   ╭─[test.lis:3:3]
 2 │ fn test() -> Map<string, int> {
 3 │   nil
   ·   ─┬─
   ·    ╰── does not exist
 4 │ }
   ╰────
  help: For an empty `Map<string, int>`, use `Map.new()` · code: [resolve.nil_not_supported]
