tests/ui/errors/snapshots/infer_no_make_constructor_map.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Map` has no `make` constructor
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let m = Map.make<string, int>(8)
   ·           ────────────┬───────────
   ·                       ╰── `Map` has no capacity-taking constructor
 4 │ }
   ╰────
  help: Use `Map.new<K, V>()`. Go's map capacity hint has no observable effect · code: [infer.no_make_constructor]
