tests/ui/errors/snapshots/infer_non_pub_interface_with_pub_implementations.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Visibility mismatch in interface implementation
   ╭─[main.lis:7:8]
 6 │ 
 7 │ struct Circle {
   ·        ───┬──
   ·           ╰── has public methods, but interface is private
 8 │   radius: float64
   ╰────
  help: `Circle` implements public methods for the private interface `Shape`. Either make the interface `pub`, or remove `pub` from the struct methods · code: [infer.non_pub_interface_pub_impl]
