tests/ui/errors/snapshots/infer_not_a_type_function_name.snap
---
source: tests/ui/errors/mod.rs
assertion_line: 1855
---
  [error] `helper` is not a type
   ╭─[test.lis:6:11]
 5 │ 
 6 │ fn run(f: helper) -> int {
   ·           ───┬──
   ·              ╰── function used in type position
 7 │   return f(21)
   ╰────
  help:  · code: [resolve.not_a_type]
