tests/ui/errors/snapshots/infer_not_a_type_function_returning_enum.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Value in type position
    ╭─[test.lis:11:11]
 10 │ 
 11 │ fn run(f: make) -> int {
    ·           ──┬─
    ·             ╰── expected type, found function
 12 │   return f(0)
    ╰────
  help: Use a function type alias or write the function type directly · code: [resolve.value_in_type_position]
